fix spacing and other few amends for the homeBlock; passed props from parent block, setting the correct background image for each;

--- a/src/sass/components/_home-block.scss
+++ b/src/sass/components/_home-block.scss
@@ -2,15 +2,17 @@
 
 	.home-block {
 		width: 100%;
-		height: 400px;
+		height: 328px;
 		position: relative;
 		z-index: 1;
-		margin: 50px 0;
+		margin: 70px 0 0 0;
+		text-align: left;
 
 		.block {
 			width: 500px;
-			height: 300px;
+			height: 328px;
 			position: relative;
+			display: inline-block;
 
 			.content {
 				background: $yellowLmld;
@@ -24,9 +26,13 @@
 			}
 		}
 
-		&.case-study-twix {
-			left: 25%;
+		&.case-study-vans {
+			.content {
+				background: #E9ECF0;
+			}
+		}
 
+		&.case-study-twix {
 			.content {
 				background: #0cf;
 			}
