--- a/src/sass/containers/_footer.scss
+++ b/src/sass/containers/_footer.scss
@@ -6,6 +6,7 @@
 		background-color: $darkGrey;
 		padding: 20px;
 		text-align: center;
+		margin-top: 70px;
 
 		.discover {
 			font-size: 30px;
